disable sim test for now

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,15 +20,15 @@ jobs:
           GO111MODULE: "on"
         with:
           args: make test-unit
-  test-sim:
-    name: Test Simulations
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout source code
-        uses: actions/checkout@v1
-      - name: Run simulation tests
-        uses: cedrickring/golang-action/go1.16@1.7.0
-        env:
-          GO111MODULE: "on"
-        with:
-          args: make test-sim-nondeterminism-fast
+  # test-sim:
+  #   name: Test Simulations
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout source code
+  #       uses: actions/checkout@v1
+  #     - name: Run simulation tests
+  #       uses: cedrickring/golang-action/go1.16@1.7.0
+  #       env:
+  #         GO111MODULE: "on"
+  #       with:
+  #         args: make test-sim-nondeterminism-fast
