--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           go-version: '^1.18'
       - name: Run Unit Tests
-        run:  make unit-test
+        run:  make test
   # test-sim:
   #   name: Test Simulations
   #   runs-on: ubuntu-latest
